<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="184dp"
    android:background="@color/darkerdarkgray"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/ic_bus" />

    <TextView
        android:id="@+id/status_nav_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/current_status"
        android:textColor="@color/white"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/closest_station_nav_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/closest_station"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/user_id_nav_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:text="@string/user_id"/>

    <TextView
        android:id="@+id/user_speed_nav_header"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/current_speed"/>

    <!--<TextView-->
        <!--android:id="@+id/textView"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/nav_header_subtitle" />-->

</LinearLayout>
